Upgrade the ReactiveMongo library to the new BSON API (#131 & Close #132)